--- a/src/main/resources/drug.html
+++ b/src/main/resources/drug.html
@@ -15,7 +15,6 @@
 
 <div class='content'>
     <div class='durg_detail'>
-        <div class='drug_box'>
             <div class="drug_box">
                 <div class="drug_top" style="border-bottom: medium none;">
                     <div class="drug_tit">
@@ -46,138 +45,141 @@
                         <a class='icon05' onclick='drugRoutesClick();'>给药途径</a>
                     </div>
                 </div>
-            </div>
-
-            <div class='items'><a id='a_0' name='a_0'></a>
-                <div><span class='item_title'>药品分类</span>
-                    <div id='all_open' style='float: right; padding-right:16px; font-size: 13px; color: #999999;'>+收起
+                <div class='drug_classify items'><a id='a_0' name='a_0'></a>
+                    <div><span class='item_title msg_tit'>药品分类</span>
+                        <div id='all_open' style='float: right; padding-right:16px; font-size: 13px; color: #999999;'>
+                            +收起
+                        </div>
+                        <div class='open'></div>
                     </div>
-                    <div class='open'></div>
-                </div>
-                <div style='padding-left:16px;' class='cates'><a style='border-bottom: 1px solid black; color:#0991da;'
-                                                                 onclick='catesClick("Z02","中成药",false);'>中成药</a> >> <a
-                        style='border-bottom: 1px solid black; color:#0991da;'
-                        onclick='catesClick("Z0201","内科用药",false);'>内科用药</a> >> <a
-                        style='border-bottom: 1px solid black; color:#0991da;'
-                        onclick='catesClick("Z020109","扶正剂",false);'>扶正剂</a> >> <a
-                        style='border-bottom: 1px solid black; color:#0991da;'
-                        onclick='catesClick("1551377","滋阴补肾",true);'>滋阴补肾</a><br/><a
-                        style='border-bottom: 1px solid black; color:#0991da;' onclick='catesClick("Z02","中成药",false);'>中成药</a>
-                    >> <a style='border-bottom: 1px solid black; color:#0991da;'
-                          onclick='catesClick("Z0201","内科用药",false);'>内科用药</a> >> <a
+                    <div class='cates cates'><a
                             style='border-bottom: 1px solid black; color:#0991da;'
-                            onclick='catesClick("1551400","扶正剂",true);'>扶正剂</a><br/></div>
-                <a id='a_1' name='a_1'></a>
-                <div class='item_title'>药品名称</div>
-                <div class='item_content'>通用名称:六味地黄丸</br>汉语拼音:Liu Wei Di Huang Wan</div>
-                <a id='a_2' name='a_2'></a>
-                <div class='item'>
-                    <div class='item_title'>成份</div>
-                    <div class='item_content'>熟地黄、山茱萸（制）、牡丹皮、山药、茯苓、泽泻。</div>
-                    <div style='height:5px;'></div>
-                </div>
-                <a id='a_3' name='a_3'></a>
-                <div class='item'>
-                    <div class='item_title'>性状</div>
-                    <div class='item_content'>本品为棕褐色或亮黑色的浓缩丸；味微甜、酸、略苦。</div>
-                    <div style='height:5px;'></div>
-                </div>
-                <a id='a_4' name='a_4'></a>
-                <div class='item'>
-                    <div class='item_title'>规格</div>
-                    <div class='item_content'>每8丸重1.44克 （每8丸相当于原药材3克）。</div>
-                    <div style='height:5px;'></div>
-                </div>
-                <a id='a_5' name='a_5'></a>
-                <div class='item'>
-                    <div class='item_title'>用法用量</div>
-                    <div class='item_content'>口服，一次8丸，一日3次。</div>
-                    <div style='height:5px;'></div>
-                </div>
-                <a id='a_6' name='a_6'></a>
-                <div class='item'>
-                    <div class='item_title'>功能主治</div>
-                    <div class='item_content'>滋阴补肾。用于肾阴亏损，头晕耳鸣，腰膝酸软，骨蒸潮热，遗精盗汗，消渴。</div>
-                    <div style='height:5px;'></div>
-                </div>
-                <a id='a_7' name='a_7'></a>
-                <div class='item'>
-                    <div class='item_title'>不良反应</div>
-                    <div class='item_content'>尚不明确。</div>
-                    <div style='height:5px;'></div>
-                </div>
-                <a id='a_8' name='a_8'></a>
-                <div class='item'>
-                    <div class='item_title'>禁忌</div>
-                    <div class='item_content'>尚不明确。</div>
-                    <div style='height:5px;'></div>
-                </div>
-                <a id='a_9' name='a_9'></a>
-                <div class='item'>
-                    <div class='item_title'>注意事项</div>
-                    <div class='item_content'>1. 忌辛辣食物。
-                        <br/>2. 不宜在服药期间服感冒药。
-                        <br/>3. 服药期间出现食欲不振，胃脘不适，大便稀，腹痛等症状时，应去医院就诊。
-                        <br/>4. 服药二周后症状未改善，应去医院就诊。
-                        <br/>5. 按照用法用量服用，孕妇、小儿应在医师指导下服用。
-                        <br/>6. 对本品过敏者禁用，过敏体质者慎用。
-                        <br/>7. 本品性状发生改变时禁止使用。
-                        <br/>8. 儿童必须在成人监护下使用。
-                        <br/>9. 请将本品放在儿童不能接触的地方。
-                        <br/>10. 如正在使用其他药品，使用本品前请咨询医师或药师。
+                            onclick='catesClick("Z02","中成药",false);'>中成药</a> >> <a
+                            style='border-bottom: 1px solid black; color:#0991da;'
+                            onclick='catesClick("Z0201","内科用药",false);'>内科用药</a> >> <a
+                            style='border-bottom: 1px solid black; color:#0991da;'
+                            onclick='catesClick("Z020109","扶正剂",false);'>扶正剂</a> >> <a
+                            style='border-bottom: 1px solid black; color:#0991da;'
+                            onclick='catesClick("1551377","滋阴补肾",true);'>滋阴补肾</a><br/><a
+                            style='border-bottom: 1px solid black; color:#0991da;'
+                            onclick='catesClick("Z02","中成药",false);'>中成药</a>
+                        >> <a style='border-bottom: 1px solid black; color:#0991da;'
+                              onclick='catesClick("Z0201","内科用药",false);'>内科用药</a> >> <a
+                                style='border-bottom: 1px solid black; color:#0991da;'
+                                onclick='catesClick("1551400","扶正剂",true);'>扶正剂</a><br/></div>
+                    <a id='a_1' name='a_1'></a>
+                    <div class='item_title msg_tit'>药品名称</div>
+                    <div class='item_content'>通用名称:六味地黄丸</br>汉语拼音:Liu Wei Di Huang Wan</div>
+                    <a id='a_2' name='a_2'></a>
+                    <div class='item'>
+                        <div class='item_title msg_tit'>成份</div>
+                        <div class='item_content'>熟地黄、山茱萸（制）、牡丹皮、山药、茯苓、泽泻。</div>
+                        <div style='height:5px;'></div>
                     </div>
-                    <div style='height:5px;'></div>
+                    <a id='a_3' name='a_3'></a>
+                    <div class='item'>
+                        <div class='item_title'>性状</div>
+                        <div class='item_content'>本品为棕褐色或亮黑色的浓缩丸；味微甜、酸、略苦。</div>
+                        <div style='height:5px;'></div>
+                    </div>
+                    <a id='a_4' name='a_4'></a>
+                    <div class='item'>
+                        <div class='item_title'>规格</div>
+                        <div class='item_content'>每8丸重1.44克 （每8丸相当于原药材3克）。</div>
+                        <div style='height:5px;'></div>
+                    </div>
+                    <a id='a_5' name='a_5'></a>
+                    <div class='item'>
+                        <div class='item_title'>用法用量</div>
+                        <div class='item_content'>口服，一次8丸，一日3次。</div>
+                        <div style='height:5px;'></div>
+                    </div>
+                    <a id='a_6' name='a_6'></a>
+                    <div class='item'>
+                        <div class='item_title'>功能主治</div>
+                        <div class='item_content'>滋阴补肾。用于肾阴亏损，头晕耳鸣，腰膝酸软，骨蒸潮热，遗精盗汗，消渴。</div>
+                        <div style='height:5px;'></div>
+                    </div>
+                    <a id='a_7' name='a_7'></a>
+                    <div class='item'>
+                        <div class='item_title'>不良反应</div>
+                        <div class='item_content'>尚不明确。</div>
+                        <div style='height:5px;'></div>
+                    </div>
+                    <a id='a_8' name='a_8'></a>
+                    <div class='item'>
+                        <div class='item_title'>禁忌</div>
+                        <div class='item_content'>尚不明确。</div>
+                        <div style='height:5px;'></div>
+                    </div>
+                    <a id='a_9' name='a_9'></a>
+                    <div class='item'>
+                        <div class='item_title'>注意事项</div>
+                        <div class='item_content'>1. 忌辛辣食物。
+                            <br/>2. 不宜在服药期间服感冒药。
+                            <br/>3. 服药期间出现食欲不振，胃脘不适，大便稀，腹痛等症状时，应去医院就诊。
+                            <br/>4. 服药二周后症状未改善，应去医院就诊。
+                            <br/>5. 按照用法用量服用，孕妇、小儿应在医师指导下服用。
+                            <br/>6. 对本品过敏者禁用，过敏体质者慎用。
+                            <br/>7. 本品性状发生改变时禁止使用。
+                            <br/>8. 儿童必须在成人监护下使用。
+                            <br/>9. 请将本品放在儿童不能接触的地方。
+                            <br/>10. 如正在使用其他药品，使用本品前请咨询医师或药师。
+                        </div>
+                        <div style='height:5px;'></div>
+                    </div>
+                    <a id='a_10' name='a_10'></a>
+                    <div class='item'>
+                        <div class='item_title'>药物相互作用</div>
+                        <div class='item_content'>如与其他药物同时使用可能会发生药物相互作用，详情请咨询医师或药师。</div>
+                    </div>
+                    <a id='a_11' name='a_11'></a>
+                    <div class='item'>
+                        <div class='item_title'>贮藏</div>
+                        <div class='item_content'>密封。</div>
+                        <div style='height:5px;'></div>
+                    </div>
+                    <a id='a_12' name='a_12'></a>
+                    <div class='item'>
+                        <div class='item_title'>包装</div>
+                        <div class='item_content'>塑料瓶装，每瓶200丸，每盒装1瓶。</div>
+                        <div style='height:5px;'></div>
+                    </div>
+                    <a id='a_13' name='a_13'></a>
+                    <div class='item'>
+                        <div class='item_title'>有效期</div>
+                        <div class='item_content'>48个月。</div>
+                        <div style='height:5px;'></div>
+                    </div>
+                    <a id='a_14' name='a_14'></a>
+                    <div class='item'>
+                        <div class='item_title'>执行标准</div>
+                        <div class='item_content'>中国药典 2010年版一部。</div>
+                        <div style='height:5px;'></div>
+                    </div>
+                    <a id='a_15' name='a_15'></a>
+                    <div class='item'>
+                        <div class='item_title'>批准文号</div>
+                        <div class='item_content'>国药准字Z20033154</div>
+                        <div style='height:5px;'></div>
+                    </div>
+                    <a id='a_16' name='a_16'></a>
+                    <div class='item'>
+                        <div class='item_title'>生产企业</div>
+                        <div class='item_content'>江西汇仁药业有限公司</div>
+                        <div style='height:5px;'></div>
+                    </div>
+                    <a id='a_17' name='a_17'></a>
+                    <div class='item'>
+                        <div class='item_title'>修订日期</div>
+                        <div class='item_content'>2010年10月01日</div>
+                        <div style='height:5px;'></div>
+                    </div>
                 </div>
-                <a id='a_10' name='a_10'></a>
-                <div class='item'>
-                    <div class='item_title'>药物相互作用</div>
-                    <div class='item_content'>如与其他药物同时使用可能会发生药物相互作用，详情请咨询医师或药师。</div>
-                    <div style='height:5px;'></div>
-                </div>
-                <a id='a_11' name='a_11'></a>
-                <div class='item'>
-                    <div class='item_title'>贮藏</div>
-                    <div class='item_content'>密封。</div>
-                    <div style='height:5px;'></div>
-                </div>
-                <a id='a_12' name='a_12'></a>
-                <div class='item'>
-                    <div class='item_title'>包装</div>
-                    <div class='item_content'>塑料瓶装，每瓶200丸，每盒装1瓶。</div>
-                    <div style='height:5px;'></div>
-                </div>
-                <a id='a_13' name='a_13'></a>
-                <div class='item'>
-                    <div class='item_title'>有效期</div>
-                    <div class='item_content'>48个月。</div>
-                    <div style='height:5px;'></div>
-                </div>
-                <a id='a_14' name='a_14'></a>
-                <div class='item'>
-                    <div class='item_title'>执行标准</div>
-                    <div class='item_content'>中国药典 2010年版一部。</div>
-                    <div style='height:5px;'></div>
-                </div>
-                <a id='a_15' name='a_15'></a>
-                <div class='item'>
-                    <div class='item_title'>批准文号</div>
-                    <div class='item_content'>国药准字Z20033154</div>
-                    <div style='height:5px;'></div>
-                </div>
-                <a id='a_16' name='a_16'></a>
-                <div class='item'>
-                    <div class='item_title'>生产企业</div>
-                    <div class='item_content'>江西汇仁药业有限公司</div>
-                    <div style='height:5px;'></div>
-                </div>
-                <a id='a_17' name='a_17'></a>
-                <div class='item'>
-                    <div class='item_title'>修订日期</div>
-                    <div class='item_content'>2010年10月01日</div>
-                    <div style='height:5px;'></div>
-                </div>
+
+                <!---->
             </div>
         </div>
-</div>
+    </div>
 </body>
 </html>
